# PluralKit

./: .dockerignore  .editorconfig  .eslintcache  .gitignore  .gitlab-ci.yml  .gitmodules  BRANCHRENAME.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dashboard  Dockerfile.gateway  Dockerfile.rust  Dockerfile.scheduled_tasks  LICENSE  PluralKit.csproj  PluralKit.sln  README.md  SECURITY.md  TODO.md  cron.sh  docker-compose.yml  flake.nix  gh-pages.js  go.work  go.work.sum  index.html  netlify.toml  nuget.config  package-lock.json  package.json  pluralkit.conf  pluralkit.conf.example  rust-toolchain.toml  shell.nix  style.css  vite.config.js
.cargo/: config.toml
.github/: FUNDING.yml
Myriad/: COPYING  Myriad.csproj  README.md  packages.lock.json
PluralKit/: Bot.cs  Models.cs  Schema.cs  Stores.cs  Utils.cs
PluralKit.API/: APIJsonExt.cs  ApiConfig.cs  AuthorizationTokenHandlerMiddleware.cs  Errors.cs  MetricsRunner.cs  Modules.cs  PluralKit.API.csproj  PluralKit.API.csproj.DotSettings  Program.cs  RequiresSystemAttribute.cs  Startup.cs  TokenAuthService.cs  openapi.yaml  packages.lock.json
PluralKit.Bot/: Bot.cs  BotConfig.cs  BotMetrics.cs  BreadcrumbExtensions.cs  ContextUtils.cs  Errors.cs  Extensions.cs  Init.cs  Limits.cs  Modules.cs  PKPerformanceEventListener.cs  PluralKit.Bot.csproj  PluralKit.Bot.csproj.DotSettings  Preconditions.cs  Utils.cs  packages.lock.json
PluralKit.Core/: CoreConfig.cs  CoreMetrics.cs  DataFiles.cs  DatabaseUtils.cs  Limits.cs  Models.cs  Modules.cs  PluralKit.Core.csproj  PluralKit.Core.csproj.DotSettings  ProxyCache.cs  Schema.cs  SchemaService.cs  Stores.cs  TODO  TaskUtils.cs  Utils.cs  db_schema.sql  packages.lock.json
PluralKit.Matrix/: GlobalUsings.cs  Init.cs  MatrixConfig.cs  Modules.cs  PluralKit.Matrix.csproj  Startup.cs  packages.lock.json  pantalaimon.conf
PluralKit.ScheduledTasks/: Metrics.cs  PluralKit.ScheduledTasks.csproj  Startup.cs  TaskHandler.cs  packages.lock.json
PluralKit.Tests/: GroupAddRemoveResponseTests.cs  PluralKit.Tests.csproj  ProxyTagParserTests.cs  TestCollection.cs  TestDatabase.cs  TestFixture.cs  TestModules.cs  packages.lock.json
PluralKit.Web/: PluralKit.Web.csproj  Program.cs  Startup.cs
bot/: Dockerfile  main.py  requirements.txt
ci/: Dockerfile  Dockerfile.dotnet  Dockerfile.rust  dotnet-version.sh  run.sh  run_ci.py  rust-docker-target.sh  spawn_jobs.py
crates/api/: Cargo.toml
crates/api/src/: auth.rs  error.rs  lib.rs  main.rs  proxyer.rs  util.rs
crates/api/src/endpoints/: bulk.rs  images.rs  internal.rs  mod.rs  private.rs  system.rs
crates/api/src/middleware/: auth.rs  authnz.rs  cors.rs  ignore_invalid_routes.rs  logger.rs  mod.rs  ownership.rs  params.rs  ratelimit.rs
crates/app-commands/: Cargo.toml
crates/app-commands/src/: main.rs
crates/avatars/: Cargo.toml
crates/avatars/src/: cleanup.rs  main.rs  migrate.rs  new.sql  process.rs  pull.rs  store.rs
crates/commands/: Cargo.toml  build.rs
crates/commands/src/: commands.rs  commands.udl  flag.rs  lib.rs  main.rs  parameter.rs  string.rs  token.rs  tree.rs  write_cs_glue.rs
crates/commands/src/commands/: config.rs  fun.rs  help.rs  member.rs  system.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: api.rs  cache_api.rs  event_awaiter.rs  logger.rs  main.rs
crates/gateway/src/discord/: cache.rs  gateway.rs  identify_queue.rs  shard_state.rs
crates/gdpr_worker/: Cargo.toml
crates/gdpr_worker/src/: main.rs
crates/libpk/: Cargo.toml
crates/libpk/src/: _config.rs  hash.rs  lib.rs  runtime_config.rs  s3.rs  state.rs
crates/libpk/src/db/: mod.rs
crates/libpk/src/db/repository/: auth.rs  avatars.rs  mod.rs  premium.rs  stats.rs
crates/libpk/src/db/types/: avatars.rs  mod.rs
crates/libpk/src/util/: redis.rs
crates/models/: Cargo.toml
crates/models/src/: _util.rs  api_key.rs  group.rs  id_ref.rs  lib.rs  member.rs  oauth2_app.rs  switch.rs  system.rs  system_config.rs
crates/premium/: Cargo.toml  init.sql
crates/premium/src/: auth.rs  error.rs  mailer.rs  main.rs  paddle.rs  payments.rs  system.rs  web.rs
crates/premium/templates/: cancel.html  index.html  info.html
crates/scheduled_tasks/: Cargo.toml
crates/scheduled_tasks/src/: main.rs  tasks.rs
dashboard/: .gitignore  README.md  go.mod  go.sum  index.html  main.go  package.json  tsconfig.json  vite.config.js
dev-docs/: BRANCHRENAME.md  LEGACYMIGRATE.md  README.md  RUNNING.md  cdn.md  dotnet.md  rust.md
docs/: CNAME  (+28 more)
gateway/: .gitignore  Cargo.toml  Dockerfile
gateway/src/: cache.rs  config.rs  db.rs  evt.rs  main.rs  util.rs
lib/libpk/: Cargo.toml  build.rs
lib/libpk/src/: _config.rs  lib.rs  rabbit.rs
lib/libpk/src/db/: mod.rs
lib/libpk/src/db/repository/: avatars.rs  mod.rs  stats.rs
lib/models/: Cargo.toml
lib/models/src/: lib.rs  system.rs  system_config.rs
lib/pk_core/: Cargo.toml
lib/pk_core/src/: lib.rs  tracing.rs  util.rs
myriad_rs/: Cargo.toml  build.rs
myriad_rs/src/: cache.rs
rustproxy/pk_bot/: Cargo.toml
rustproxy/pk_bot/src/: cache.rs  config.rs  db.rs  gateway.rs  main.rs  model.rs  redis.rs
rustproxy/pk_bot/src/proxy/: autoproxy.rs  mod.rs  post_proxy.rs  profile.rs  reply.rs  tags.rs  webhook.rs
services/api/: Cargo.toml  Dockerfile
services/api/src/: error.rs  main.rs  util.rs
services/api/src/endpoints/: private.rs
services/api/src/middleware/: authnz.rs  cors.rs  ignore_invalid_routes.rs  logger.rs  mod.rs  ratelimit.lua  ratelimit.rs
services/avatars/: Cargo.toml  Dockerfile
services/avatars/src/: cleanup.rs  init.sql  main.rs  migrate.rs  process.rs  pull.rs
services/dispatch/: Cargo.toml  Dockerfile
services/dispatch/src/: logger.rs  main.rs
services/gateway/: Cargo.toml
services/gateway/src/: cache_api.rs  logger.rs  main.rs
services/gateway/src/discord/: cache.rs  gateway.rs  identify_queue.rs  mod.rs  shard_state.rs
services/scheduled_tasks/: Cargo.toml  Dockerfile  db.go  go.mod  go.sum  main.go  repo.go  tasks.go
services/scheduled_tasks/src/: main.rs  tasks.rs
services/test-rabbit/: Cargo.toml
services/test-rabbit/src/: main.rs
(+1076 files in other folders)
