[workspace]
members = [
    "./lib/libpk",
    "./lib/commands",
    "./services/api",
    "./services/dispatch"
]

[workspace.dependencies]
anyhow = "1"
axum = "0.7.5"
fred = { version = "5.2.0", default-features = false, features = ["tracing", "pool-prefer-active"] }
lazy_static = "1.4.0"
metrics = "0.20.1"
serde = "1.0.152"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono", "macros"] }
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }

prost = "0.12"
prost-types = "0.12"
prost-build = "0.12"
