[workspace]
members = [
    "./lib/libpk",
    "./services/api",
    "./services/dispatch",
    "./services/gateway"
]

[workspace.dependencies]
anyhow = "1"
axum = "0.7.5"
axum-macros = "0.4.1"
bytes = "1.6.0"
chrono = "0.4"
fred = { version = "5.2.0", default-features = false, features = ["tracing", "pool-prefer-active"] }
futures = "0.3.30"
lazy_static = "1.4.0"
metrics = "0.23.0"
serde = "1.0.152"
serde_json = "1.0.117"
signal-hook = "0.3.17"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono", "macros"] }
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }

twilight-gateway = { git = "https://github.com/pluralkit/twilight" }
twilight-cache-inmemory = { git = "https://github.com/pluralkit/twilight", features = ["permission-calculator"] }
twilight-util = { git = "https://github.com/pluralkit/twilight", features = ["permission-calculator"] }
twilight-model = { git = "https://github.com/pluralkit/twilight" }
twilight-http = { git = "https://github.com/pluralkit/twilight", default-features = false, features = ["rustls-native-roots"] }

#twilight-gateway = { path = "../twilight/twilight-gateway" }
#twilight-cache-inmemory = { path = "../twilight/twilight-cache-inmemory", features = ["permission-calculator"] }
#twilight-util = { path = "../twilight/twilight-util", features = ["permission-calculator"] }
#twilight-model = { path = "../twilight/twilight-model" }
#twilight-http = { path = "../twilight/twilight-http", default-features = false, features = ["rustls-native-roots"] }

prost = "0.12"
prost-types = "0.12"
prost-build = "0.12"
