[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Infrastructure
anyhow = "1"
config = { version = "0.11", default-features = false, features = ["json"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
lazy_static = "1.4.0"

procfs = "0.12.0"
libc = "0.2.122"

# Twilight
twilight-gateway = "0.10.1"
twilight-gateway-queue = "0.10.0"
twilight-http = "0.10.0"
twilight-model = "0.10.2"

# Database
deadpool = "0.9"
deadpool-postgres = "0.10"
postgres-types = { version = "0.2", features = ["derive"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-0_8"] }

redis = { version = "0.21.5", features = ["aio", "tokio-comp"] }

myriad = { path = "../myriad_rs" }