[package]
name = "avatars"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "avatar_cleanup"
path = "src/cleanup.rs"

[dependencies]
libpk = { path = "../libpk" }
pluralkit_models = { path = "../models" }
anyhow = { workspace = true }
aws-sdk-s3 = { workspace = true }
axum = { workspace = true, features = ["multipart"]}
data-encoding = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
subtle = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

gif = "0.13.1"
image = { version = "0.25.6", default-features = false, features = ["gif", "jpeg", "png", "webp", "tiff"] }
form_urlencoded = "1.2.1"
thiserror = "1.0.56"
webp = "0.3.1"
