[package]
name = "pluralkit_models"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
pk_macros = { path = "../macros" }
jsonwebtoken = { workspace = true }
sea-query = "0.32.1"
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
sqlx = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
