[package]
name = "pluralkit_models"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
pk_macros = { path = "../macros" }
sea-query = "0.32.1"
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
# in theory we want to default-features = false for sqlx
# but cargo doesn't seem to support this
sqlx = { workspace = true, features = ["chrono"] }
uuid = { workspace = true }
