[package]
name = "scheduled_tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
libpk = { path = "../libpk" }

anyhow = { workspace = true }
chrono = { workspace = true }
fred = { workspace = true }
metrics = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
twilight-http = { workspace = true }

croner = "2.1.0"
num-format = "0.4.4"
