[package]
name = "libpk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true } 
fred = { workspace = true }
lazy_static = { workspace = true }
metrics = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true}
twilight-model = { workspace = true }
uuid = { workspace = true }

config = "0.14.0"
metrics-exporter-prometheus = { version = "0.15.3", default-features = false, features = ["tokio", "http-listener", "tracing"] }

[build-dependencies]
prost-build = { workspace = true }
