[package]
name = "pk_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
chrono = "0.4.19"
config = { version = "0.13.1", default-features = false, features = ["toml"] }
dashmap = "5.3.4"
futures = "0.3.21"
moka = { version = "0.8.5", features = ["future"] }
once_cell = "1.12.0"
redis = { version = "0.21.5", features = ["connection-manager", "tokio-comp"] }
regex = "1.5.6"
serde = "1.0.137"
serde_json = "1.0.81"
smallvec = "1.8.0"
smol_str = "0.1.23"
sqlx = { version = "0.6.0", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros"] }
thiserror = "1.0.31"
tokio = { version = "1.19.1", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
twilight-gateway = "0.11.0"
twilight-gateway-queue = "0.11.0"
twilight-http = "0.11.0"
twilight-model = "0.11.0"
twilight-util = { version = "0.11.0", features = ["builder", "permission-calculator"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
