[package]
name = "avatars"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "avatar_cleanup"
path = "src/cleanup.rs"

[dependencies]
libpk = { path = "../../lib/libpk" }
anyhow = { workspace = true }
axum = { workspace = true }
data-encoding = "2.5.0"
form_urlencoded = "1.2.1"
futures = { workspace = true }
gif = "0.13.1"
image = { version = "0.24.8", default-features = false, features = ["gif", "jpeg", "png", "webp", "tiff"] }
reqwest = { workspace = true }
rust-s3 = { version = "0.33.0", default-features = false, features = ["tokio-rustls-tls"] }
sha2 = "0.10.8"
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = "1.0.56"
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
webp = "0.2.6"
